# STM32-DigitalPower-Cmake

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakePresets.json  DigitalPowerCmake.ioc  DigitalPowerIDE Debug (1).launch  DigitalPowerIDE.ioc  STM32G474RETX_FLASH.ld
.github/workflows/: build.yml
Core/Inc/: adc.h  main.h  stm32g4xx_it.h  usart.h
Core/Src/: adc.c  gpio.c  hrtim.c  i2c.c  iwdg.c  main.c  spi.c  stm32g4xx_it.c  tim.c  usart.c
Core/Startup/: startup_stm32g474retx.s
Debug/: DigitalPowerIDE.elf  DigitalPowerIDE.list  DigitalPowerIDE.map  makefile  objects.list  sources.mk
Debug/Core/Src/: adc.cyclo  adc.d  adc.su  dma.cyclo  dma.d  dma.su  gpio.cyclo  gpio.d  gpio.su  hrtim.cyclo  hrtim.d  hrtim.su  i2c.cyclo  i2c.d  i2c.su  iwdg.cyclo  iwdg.d  iwdg.su  main.cyclo  main.d  main.su  spi.cyclo  spi.d  spi.su  stm32g4xx_hal_msp.cyclo  stm32g4xx_hal_msp.d  stm32g4xx_hal_msp.su  stm32g4xx_it.cyclo  stm32g4xx_it.d  stm32g4xx_it.su  subdir.mk  system_stm32g4xx.cyclo  system_stm32g4xx.d  system_stm32g4xx.su  tim.cyclo  tim.d  tim.su  usart.cyclo  usart.d  usart.su
Debug/Drivers/STM32G4xx_HAL_Driver/Src/: stm32g4xx_hal.cyclo  stm32g4xx_hal.d  stm32g4xx_hal.su  stm32g4xx_hal_adc.cyclo  stm32g4xx_hal_adc.d  stm32g4xx_hal_adc.su  stm32g4xx_hal_adc_ex.cyclo  stm32g4xx_hal_dma.d  (+68 more)
Debug/MyCore/Src/: font.d  oled.cyclo  oled.d  oled.su  subdir.mk  task.cyclo  task.d  task.su
MyCore/Inc/: Key.h  PID.h  W25Q64_Ins.h  font.h  function.h  oled.h  task.h
MyCore/Src/: Key.c  PID.c  font.c  function.c  oled.c  task.c
cmake/: stm32_toolchain.cmake
